feat: display correct emoji at page load

--- a/app/styles/emoji.scss
+++ b/app/styles/emoji.scss
@@ -51,6 +51,7 @@
     visibility: hidden;
     width: 100%;
     
+    &--emo-0 { fill: $warm-red; }
     &--emo-1 { fill: $warm-red; }
     &--emo-2 { fill: $warm-dark-orange; }
     &--emo-3 { fill: $warm-dark-orange; }
