feat: add responsive water measure based on water max value

--- a/app/styles/animations.scss
+++ b/app/styles/animations.scss
@@ -22,3 +22,21 @@
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
+
+@keyframes waves {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes shake {
+  0% { transform: skewY(0); }
+  20% { transform: skewY(-5deg); }
+  40% { transform: skewY(5deg); }
+  60% { transform: skewY(-2deg); }
+  80% { transform: skewY(2deg); }
+  100% { transform: skewY(0); }
+}
