--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'controls.scss';
 @import 'emoji.scss';
 @import 'water.scss';
+@import 'measure.scss';
 
 @import 'archive.scss';
 @import 'stats.scss';
