--- a/app/styles/water.scss
+++ b/app/styles/water.scss
@@ -2,11 +2,24 @@
   background-color: $cold-darkest-blue;
   bottom: 0;
   left: 0;
+  opacity: 1;
   position: absolute;
   right: 0;
-  transition: top 1s cubic-bezier(0.5,-0.5,0.5,1.5);
+  transition:
+    opacity 0.5s,
+    top 1s cubic-bezier(0.5,-0.5,0.5,1.5),
+    visibility 0s;
   width: 100%;
   z-index: -1;
+
+  &--hidden {
+    opacity: 0;
+    visibility: hidden;
+    transition:
+      opacity 0.5s,
+      top 1s cubic-bezier(0.5,-0.5,0.5,1.5),
+      visibility 0s 0.5s;
+  }
   
   &--shake {
     animation: shake alternate;
@@ -26,11 +39,11 @@
 
 //| WAVES                                                                   |//
 .waves {
-  position: absolute;
-  top: calc((5vw - 1px) * -1);
-  left: 0;
-  right: 0;
   height: 5vw;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: calc((5vw - 1px) * -1);
   width: 100%;
 }
 
