--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,9 +31,10 @@
   }
   //: APP CONTAINER                                                         ://
   &__container {
-    display: flex;
     align-items: flex-end;
+    display: flex;
     bottom: 0;
+    justify-content: center;
     left: 0;
     min-height: 300px;
     position: fixed;
