--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,7 +10,9 @@
 
 @import 'overall.scss';
 @import 'header.scss';
+@import 'tabs.scss';
 @import 'navigation.scss';
+@import 'buttons.scss';
 @import 'app.scss';
 @import 'counter.scss';
 @import 'controls.scss';
