--- a/app/styles/overall.scss
+++ b/app/styles/overall.scss
@@ -12,6 +12,7 @@ html {
   box-sizing: border-box;
   scroll-behavior: smooth;
   touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 *,
