--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -31,6 +31,8 @@ $burgerBtn-size-lg: 70px;
 $burgerBtn-padding-xs: 15px;
 $burgerBtn-padding-md: 17px;
 $burgerBtn-padding-lg: 20px;
+
+$button-time-active: 0.3s;
 //| SIDEBAR                                                                 |//
 $sidebar-toggle: 0.4s;
 
