--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,7 +48,7 @@
     bottom: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     left: 0;
     overflow: auto;
     position: fixed;
@@ -94,16 +94,6 @@
       pointer-events: none;
       width: 200px;
     }
-
-    &__svg {
-      width: $size-main-buttons;
-      height: $size-main-buttons;
-      pointer-events: none;
-      transition: transform 0.4s;
-
-      &--active {
-        transform: rotate(135deg);
-      }
     } */
   }
 }
