--- a/app/styles/tabs.scss
+++ b/app/styles/tabs.scss
@@ -2,16 +2,27 @@
 @import 'mixins.scss';
 
 .tab {
-  flex-grow: 1;
+  //flex-grow: 1
   width: 100%;
-  font-weight: 300;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: stretch;
   //padding-top: $header-height-xs;
 
-  &__header {}
+  &--archive {
+
+  }
+  &--stats {
+
+  }
+  &--setting {
+
+  }
+
+  &__header {
+    margin: 0;
+  }
 
   &__button {
     @include button;
@@ -29,7 +40,6 @@
       width: $burgerBtn-size-xs;
     }
 
-
     &:hover {
       fill: $cold-light-blue;
       color: $cold-light-blue;
@@ -38,12 +48,10 @@
 
     @media only screen and (min-width: $media-md) {
       padding: $header-padding-md;
-  
     }
     
     @media only screen and (min-width: $media-lg) {
       padding: $header-padding-lg;
-  
     }
   }
 
@@ -54,6 +62,13 @@
 
   &__svg {
     width: $burgerBtn-size-xs;
+    pointer-events: none;
+    transform: rotate(0);
+    transition: transform $button-time-active;
+
+    &--active {
+      transform: rotate(135deg);
+    }
   }
 
   /* &__weeks {
