feat(sidebar): toggle tabs containers visibility

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,8 @@
 @import 'emoji.scss';
 @import 'water.scss';
 @import 'measure.scss';
+@import 'archiveWeek.scss';
+@import 'archiveEntry.scss';
 
 @import 'archive.scss';
 @import 'stats.scss';
