--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -36,6 +36,8 @@ $button-time-active: 0.3s;
 //| SIDEBAR                                                                 |//
 $sidebar-toggle: 0.4s;
 
+$tab-expand: 0.6s;
+
 //| TIME                                                                    |//
 $time-hover-effect: 0.2s;
 
@@ -61,12 +63,10 @@ $layout-xs-sm-padding: 1rem;
 $br-items: 5px;
 
 
-$time-mobmenu-expand: 0.7s;
 $time-edit-mode: 0.2s;
 $time-edit-buttons: 0.5s;
 $time-week-slide: 0.5s;
 $time-week-entries: 0.6s;
-$time-toggle-sidebar: 0.4s;
 
 $time-new-entry: 0.5s;
 
