--- a/app/styles/settings.scss
+++ b/app/styles/settings.scss
@@ -9,7 +9,7 @@
     background-color: $cold-dark-blue;
     height: 0;
     overflow: hidden;
-    transition: height $time-mobmenu-expand ease-in-out;
+    transition: height $tab-expand ease-in-out;
 
     &--active {
       height: 60px;
