--- a/app/styles/tabs.scss
+++ b/app/styles/tabs.scss
@@ -3,12 +3,11 @@
 
 .tab {
   //flex-grow: 1
-  width: 100%;
+  align-items: stretch;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: stretch;
-  //padding-top: $header-height-xs;
+  //justify-content: flex-end;
+  width: 100%;
 
   &--archive {
 
@@ -58,6 +57,7 @@
   &__heading {
     font-weight: 700;
     font-size: 2em;
+    pointer-events: none;
   }
 
   &__svg {
@@ -71,21 +71,42 @@
     }
   }
 
-  /* &__weeks {
+  &__container {
     background-color: $cold-dark-blue;
     position: relative;
-    width: 100%;
     height: 0;
     overflow: hidden;
-    transition: height $time-mobmenu-expand;
-  } */
+    transition: height $tab-expand;
+    width: 100%;
+
+    //height: 200px; 
+
+  }
+}
+
+.archive {
+  
+}
 
 
+.settings {
+  flex-grow: 1;
+  width: 100%;
 
+  &__container {
+    background-color: $cold-dark-blue;
+    height: 0;
+    overflow: hidden;
+    transition: height $tab-expand ease-in-out;
 
+    &--active {
+      height: 60px;
+    }
+  }
 
-
-
-
-
+  &__text {
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+  }
 }
