--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -40,7 +40,7 @@ $tab-expand: 0.6s;
 
 //| TIME                                                                    |//
 $time-hover-effect: 0.2s;
-
+$archive-entries-fade-time: 1s;
 
 
 
