feat(water): reorganize measure and water levels sections

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,5 +23,5 @@
 
 @import 'landingControls.scss';
 @import 'landingCounter.scss';
-@import 'landingMeasure.scss';
+@import 'landingGraph.scss';
 @import 'landingWater.scss';
