--- a/app/styles/landingGraph.scss
+++ b/app/styles/landingGraph.scss
@@ -1,25 +1,53 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
-.measure {
+.graph {
   display: flex;
-  flex-direction: column;
   height: 100%;
-  justify-content: space-between;
   left: 0;
-  margin: 0;
-  padding: 0;
   position: absolute;
   top: 0;
-
-  &__level {
-    align-items: center;
+  width: 100%;
+  
+  &__measure {
     display: flex;
-    visibility: hidden;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+  }
 
-    &--visible {
-      visibility: visible;
+  &__levels {
+    width: 100%;
+    position: relative;
+  }
+
+
+  //: WATER LEVELS                                                          ://
+  &__level {
+    border-top: 5px dashed $cold-light-blue;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    transition: bottom $verticalTranslation;
+  
+    &--avg {
+      border-color: $cold-blue;
     }
+  
+    &--min {
+      
+    }
+  }
+}
+
+.measurePart {
+  align-items: center;
+  display: flex;
+  visibility: hidden;
+
+  &--visible {
+    visibility: visible;
   }
 
   &__mark {
