--- a/app/styles/landingWater.scss
+++ b/app/styles/landingWater.scss
@@ -1,8 +1,6 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
-$verticalTranslation: 1s cubic-bezier(0.5,-0.5,0.5,1.5);
-
 //| WATER                                                                   |//
 .water {
   background-color: $cold-darkest-blue;
@@ -46,6 +44,7 @@ $verticalTranslation: 1s cubic-bezier(0.5,-0.5,0.5,1.5);
 .waves {
   height: 5vw;
   left: 0;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: calc((5vw - 1px) * -1);
@@ -73,20 +72,5 @@ $verticalTranslation: 1s cubic-bezier(0.5,-0.5,0.5,1.5);
   &__svg {
     fill: $cold-darkest-blue;
     width: 100%;
-  }
-}
-//| WATER LEVELS                                                            |//
-.level {
-  border-top: 5px dashed $cold-light-blue;
-  left: 50px;
-  position: absolute;
-  width: 100%;
-  transition: bottom $verticalTranslation;
-
-  &--average {
-    border-color: $cold-blue;
-  }
-
-  &--optimal {
   }
 }
