--- a/app/styles/landingControls.scss
+++ b/app/styles/landingControls.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   display: grid;
   padding: $header-padding-xs;
-  position: fixed;
+  position: absolute;
   right: 0;
   row-gap: $controls-gap-xs;
 
