--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,7 +10,7 @@
 
 @import 'overall.scss';
 @import 'app.scss';
-@import 'header.scss';
+@import 'logo.scss';
 @import 'tabs.scss';
 @import 'buttons.scss';
 @import 'emoji.scss';
