--- a/app/styles/archiveWeek.scss
+++ b/app/styles/archiveWeek.scss
@@ -90,4 +90,24 @@
     padding: 0;
     margin: 0;
   }
+
+  @media only screen and (min-width: $media-md) {
+
+    & {
+
+      &__container {
+        padding: 30px 50px;
+      }
+    }
+  }
+
+  @media only screen and (min-width: $media-lg) {
+
+    & {
+      
+      &__container {
+        padding: 30px 100px;
+      }
+    }
+  }
 }
