--- a/app/styles/tabs.scss
+++ b/app/styles/tabs.scss
@@ -2,21 +2,20 @@
 @import 'mixins.scss';
 
 .tab {
-  //flex-grow: 1
   align-items: stretch;
   display: flex;
   flex-direction: column;
-  //justify-content: flex-end;
   width: 100%;
 
   &--archive {
-
+    flex-grow: 1;
+    justify-content: flex-end;
   }
   &--stats {
 
   }
-  &--setting {
-
+  &--settings {
+    flex-grow: 1
   }
 
   &__header {
