--- a/app/styles/landingWater.scss
+++ b/app/styles/landingWater.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   left: 0;
   opacity: 1;
+  pointer-events: none;
   position: absolute;
   right: 0;
   transition:
@@ -48,6 +49,17 @@
   position: absolute;
   right: 0;
   width: 100%;
+
+  &::after {
+    background-color: $cold-darkest-blue;
+    content: '';
+    height: 100px;
+    left: 0;
+    position: absolute;
+    top: 90%;
+    width: 100%;
+    z-index: -1;
+  }
 }
 
 .wave {
