--- a/app/styles/overall.scss
+++ b/app/styles/overall.scss
@@ -25,5 +25,5 @@ body {
   background: #fafafa;
   color: $cold-light-blue;
   font-family: 'Comfortaa', Arial, sans-serif;
-  font-weight: medium;
+  font-weight: 400;
 }
