--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -32,12 +32,13 @@
   }
   //: APP LANDING PANEL                                                     ://
   &__landing {
-    align-items: flex-end;
+    align-items: flex-start;
     display: flex;
     bottom: 0;
     justify-content: center;
     left: 0;
-    min-height: 300px;
+    min-height: 400px;
+    padding-top: $burgerBtn-size-xs + ($header-padding-xs * 2);
     position: fixed;
     top: 0;
     transition: width $sidebar-toggle;
