style(sidebar): add box shadow to app's sidebar

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -64,6 +64,7 @@
     align-items: center;
     background-color: $cold-darkest-blue;
     bottom: 0;
+    box-shadow: 0 0 40px 10px $blue-black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
