--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,5 +1,6 @@
 //| COLORS                                                                  |//
 //: BLUE                                                                    ://
+$blue-black: #041927;
 $cold-darkest-blue: #112f44;
 $cold-dark-blue: #274c66;
 $cold-blue: #4a8eb2;
