feat(user): set basic html structure of user section

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -59,7 +59,7 @@
       }
     }
   }
-  //: APP SIDEBAR                                                             ://
+  //: APP SIDEBAR                                                           ://
   &__sidebar {
     align-items: center;
     background-color: $cold-darkest-blue;
@@ -108,5 +108,15 @@
         width: 40%;
       }
     }
+  }
+  //: APP USER                                                              ://
+  &__user {
+    background-color: $cold-dark-blue;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
   }
 }
