--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@
 @import 'tabs.scss';
 @import 'buttons.scss';
 @import 'emoji.scss';
+@import 'user.scss';
 
 @import 'archiveWeek.scss';
 @import 'archiveEntry.scss';
