feat(user): add toggling functionality between user input details

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -17,6 +17,9 @@ $media-md: 768px;
 $media-lg: 1024px;
 //: LOGO                                                                    ://
 $logo-aspect-ratio: 512 / 135;
+//: USER DETAILS                                                            ://
+$user-detail-toggle: 0.3s;
+
 //: PAGE HEADER                                                             ://
 $header-padding-xs: 10px;
 $header-padding-md: 20px;
