--- a/app/styles/user.scss
+++ b/app/styles/user.scss
@@ -7,12 +7,31 @@
   grid-template-columns: repeat(2, 1fr);
   left: 0;
   margin: 0 20px;
+  opacity: 0;
   position: absolute;
   right: 0;
+  transform: translateX(0);
+  transition:
+    opacity $user-detail-toggle,
+    transform $user-detail-toggle,
+    visibility 0s $user-detail-toggle;
   visibility: hidden;
 
   &--visible {
+    opacity: 1;
+    transition:
+      opacity $user-detail-toggle,
+      transform $user-detail-toggle,
+      visibility 0s;
     visibility: visible;
+  }
+
+  &--hiddenLeft {
+    transform: translateX(-100vw);
+  }
+
+  &--hiddenRight {
+    transform: translateX(100vw);
   }
 
   &__label {
@@ -61,6 +80,7 @@
   }
 
   &__svg {
+    pointer-events: none;
     width: 100%;
   }
 }
