--- a/app/styles/user.scss
+++ b/app/styles/user.scss
@@ -1,8 +1,12 @@
+@import 'variables.scss';
+@import 'mixins.scss';
+
 .user {
   display: grid;
   grid-template-areas:
   "label label"
   "input input"
+  "alert alert"
   "prev  next ";
   grid-template-columns: repeat(2, 1fr);
   left: 0;
@@ -10,6 +14,7 @@
   opacity: 0;
   position: absolute;
   right: 0;
+  row-gap: 20px;
   transform: translateX(0);
   transition:
     opacity $user-detail-toggle,
@@ -39,6 +44,7 @@
     font-weight: 700;
     font-size: 1.8em;
     grid-area: label;
+    margin-bottom: 20px;
     text-align: center;
 
   }
@@ -50,7 +56,6 @@
     color: $cold-light-blue;
     font-size: 1.4em;
     grid-area: input;
-    margin: 20px 0;
     min-height: 50px;
     outline: none;
     padding: 10px 20px;
@@ -59,6 +64,23 @@
     &:focus {
       border-color: $cold-light-blue;
     }
+  }
+
+  &__alert {
+    grid-area: alert;
+    height: 0;
+    overflow: hidden;
+    transition: height $user-detail-toggle;
+  }
+
+  &__alertText {
+    background-color: $cold-darkest-blue;
+    border-radius: 10px;
+    line-height: 1.4;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+
   }
 
   &__button {
