feat: add first entry to hydrappJson with today's date

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -117,7 +117,12 @@
     left: 0;
     position: fixed;
     top: 0;
+    visibility: visible;
     width: 100%;
     z-index: 2;
+
+    &--hidden {
+      visibility: hidden;
+    }
   }
 }
