--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -115,6 +115,7 @@
     background-color: $cold-dark-blue;
     height: 100%;
     left: 0;
+    opacity: 1;
     position: fixed;
     top: 0;
     visibility: visible;
@@ -122,6 +123,8 @@
     z-index: 2;
 
     &--hidden {
+      opacity: 0;
+      transition: opacity $user-detail-toggle, visibility 0s $user-detail-toggle;
       visibility: hidden;
     }
   }
