--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -115,17 +115,18 @@
     background-color: $cold-dark-blue;
     height: 100%;
     left: 0;
-    opacity: 1;
+    opacity: 0;
     position: fixed;
     top: 0;
-    visibility: visible;
+    transition: opacity $user-detail-toggle, visibility 0s $user-detail-toggle;
+    visibility: hidden;
     width: 100%;
     z-index: 2;
 
-    &--hidden {
-      opacity: 0;
-      transition: opacity $user-detail-toggle, visibility 0s $user-detail-toggle;
-      visibility: hidden;
+    &--visible {
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 0s, visibility 0s;
     }
   }
 }
