--- a/app/styles/landingCounter.scss
+++ b/app/styles/landingCounter.scss
@@ -123,8 +123,13 @@
     transform-origin: center top;
     width: 100%;
 
-    &--rotated {
+    &--rotatedNext {
       transform: rotateX(270deg);
+      opacity: 0;
+    }
+
+    &--rotatedPrev {
+      transform: rotateX(-90deg);
       opacity: 0;
     }
 
@@ -134,36 +139,6 @@
 
     &--animateOut {
       transition: opacity 0.3s 0.3s, transform 0.6s ease-in-out;
-    }
-  }
-
-  @media only screen and (min-width: $media-sm) {
-
-    & {
-
-      &__svg {
-        //padding: 15px;
-      }
-    }
-  }
-
-  @media only screen and (min-width: $media-md) {
-
-    & {
-
-      &__svg {
-        //padding: 20px;
-      }
-    }
-  }
-  
-  @media only screen and (min-width: $media-lg) {
-
-    & {
-
-      &__svg {
-        //padding: 25px;
-      }
     }
   }
 }
