feat(archive): change week classes to card classes

--- a/app/styles/archiveWeek.scss
+++ b/app/styles/archiveWeek.scss
@@ -2,7 +2,7 @@
 @import 'mixins.scss';
 
 //| WEEK                                                                    |//
-.week {
+.card {
   bottom: 0;
   height: 100%;
   left: 0;
