--- a/app/styles/stats.scss
+++ b/app/styles/stats.scss
@@ -2,18 +2,24 @@
 @import 'mixins.scss';
 
 .stats {
+  align-items: center;
   border-collapse: collapse;
   display: flex;
   flex-direction: column;
-  padding: 30px;
+  padding: $tab-offset-xs;
   width: 100%;
 
   &__header {
     background-color: $cold-darkest-blue;
+    max-width: $tab-maxWidth;
+    min-width: $tab-minWidth;
+    width: 100%;
   }
   
   &__body {
-
+    max-width: $tab-maxWidth;
+    min-width: $tab-minWidth;
+    width: 100%;
   }
 
   &__row {
@@ -30,6 +36,20 @@
     &--header {
       width: 100%;
       text-align: center;
+    }
+  }
+
+  @media only screen and (min-width: $media-md) {
+
+    & {
+      padding: $tab-offset-md;
+    }
+  }
+
+  @media only screen and (min-width: $media-lg) {
+
+    & {
+      padding: $tab-offset-lg;
     }
   }
 }
